# albert_word_similarity_api

./: .gitignore  Dockerfile  README.md  configs.py  containers.py  docker-compose.yml  endpoints.py  main.py  pyproject.toml
src/domain/word_similarity/: PredictionConfig.py  PredictionRequest.py  PredictionResponse.py  SimilarityResult.py  WordSimilarity.py  WordSimilarityResolver.py
src/infra/resolvers/word_similarity/: WordSimilarityResolverImpl.py
src/infra/resolvers/word_similarity/redis/: WordVectorCacheClient.py
src/usecase/word_similarity/: PredictWordSimilarityUseCase.py
