[tool.poetry]
name = "albert_word_similarity_api"
version = "0.1.0"
description = ""
authors = ["kondo.atsumine <kondo.atsumine@moneyforward.co.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.1"
torchvision = "^0.13.1"
transformers = "^4.21.2"
sentencepiece = "^0.1.97"
fastapi = "^0.80.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pandas = "^1.4.3"
Inject = "^4.3.1"
dependency-injector = "^4.40.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
