[tool.poetry]
name = "albert_word_similarity_api"
version = "0.1.0"
description = ""
authors = ["kondo.atsumine <kondo.atsumine@moneyforward.co.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
torchvision = "^0.15.2"
transformers = "^4.29.2"
sentencepiece = "^0.1.99"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pandas = "^2.0.1"
Inject = "^4.3.1"
dependency-injector = "^4.40.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
